// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Custom Trigger Configuration Panel 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.triggerConfigurationLabel: pipeline.triggers.onNewWebhookTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="wrapperComponentTestForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main descriptionLabel"
                  data-tooltip-id="webhookTrigger_description"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main descriptionLabel"
                  data-tooltip-id="webhookTrigger_tags"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline.triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_sourceRepo"
                  >
                    pipeline.triggers.triggerConfigurationPanel.payloadType
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.customLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`WebhookTriggerConfigPanel Triggers tests Renders/snapshots Initial Render - Github Trigger Configuration Panel 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="Layout--vertical StyledProps--main webhookConfigurationContainer StyledProps--padding-xxlarge"
        >
          <h2
            class="heading"
          >
            pipeline.triggers.triggerConfigurationLabel: pipeline.triggers.onNewWebhookTitle
          </h2>
          <div>
            <div
              class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="wrapperComponentTestForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        placeholder="common.namePlaceholder"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main descriptionLabel"
                  data-tooltip-id="webhookTrigger_description"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="description-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </label>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
              >
                <label
                  class="Label--main descriptionLabel"
                  data-tooltip-id="webhookTrigger_tags"
                >
                  optionalField
                  <span
                    class="bp3-icon StyledProps--main editOpen"
                    data-icon="Edit"
                    data-name="edit"
                    data-testid="tags-edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      >
                        <path
                          d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                          stroke="#555770"
                        />
                        <path
                          d="M6.583 5.146l2.063-2.063"
                          opacity="0.3"
                          stroke="#606170"
                        />
                      </g>
                    </svg>
                  </span>
                </label>
              </div>
            </div>
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main listenOnNewWebhook"
              level="2"
            >
              pipeline.triggers.triggerConfigurationPanel.listenOnNewWebhook
            </h2>
            <section
              style="width: 650px;"
            >
              <div
                class="bp3-form-group"
                data-id="sourceRepo-1"
              >
                <label
                  class="bp3-label"
                  for="sourceRepo"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_sourceRepo"
                  >
                    pipeline.triggers.triggerConfigurationPanel.payloadType
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="sourceRepo"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="common.repo_provider.githubLabel"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <section
                class="main"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-2"
                >
                  <label
                    class="bp3-label"
                  >
                    connector
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      style="width: 324px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          connectors.selectConnector
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-link"
                  style="padding: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    plusAdd
                  </span>
                </button>
              </section>
              <div
                class="bp3-form-group"
                data-id="event-3"
              >
                <label
                  class="bp3-label"
                  for="event"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="wrapperComponentTestForm_event"
                  >
                    pipeline.triggers.triggerConfigurationPanel.event
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="event"
                          placeholder="- pipeline.triggers.triggerConfigurationPanel.eventPlaceholder -"
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
